--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,17 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:text="@string/title"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
             android:text="@string/intro"
             android:textSize="18sp" />
@@ -59,7 +48,8 @@
             android:layout_gravity="center|bottom"
             android:layout_marginTop="16dp"
             android:onClick="openStartActivity"
-            android:text="@string/start" />
+            android:text="@string/start"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
